--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AL Fisher",
+  "name": "Libria Interceptor",
   "version": "0.2",
   "description": "Анус себе заблокируй",
   "developer": {
